RESOLVED FIXED Bug 192924
[Win][Clang] Fix compilation warnings of DumpRenderTree
https://bugs.webkit.org/show_bug.cgi?id=192924
Summary [Win][Clang] Fix compilation warnings of DumpRenderTree
Fujii Hironori
Reported 2018-12-20 02:03:32 PST
[Win][Clang] Fix compilation warnings of DumpRenderTree clang-cl reports the following warnings: > ..\..\Tools\DumpRenderTree\win/FrameLoadDelegate.h(38,1): warning: 'FrameLoadDelegate' defined as a class here but previously declared as a struct [-Wmismatched-tags] > ..\..\Tools\DumpRenderTree\win/PolicyDelegate.h(36,1): warning: 'PolicyDelegate' defined as a class here but previously declared as a struct [-Wmismatched-tags] > ..\..\Tools\DumpRenderTree\win\AccessibilityControllerWin.cpp(47,7): warning: field 'm_scrollingStartEventHook' will be initialized after field 'm_valueChangeEventHook' [-Wreorder] > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(1341,82): warning: format specifies type 'unsigned int' but the argument has type 'HRESULT' (aka 'long') [-Wformat] > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(1544,9): warning: unused variable 'result' [-Wunused-variable] > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(1556,79): warning: format specifies type 'int' but the argument has type 'DWORD' (aka 'unsigned long') [-Wformat] > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(1560,73): warning: format specifies type 'int' but the argument has type 'DWORD' (aka 'unsigned long') [-Wformat] > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(1563,76): warning: format specifies type 'int' but the argument has type 'DWORD' (aka 'unsigned long') [-Wformat] > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(527,53): warning: ISO C++11 does not allow conversion from string literal to 'wchar_t *' [-Wwritable-strings] > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(528,52): warning: ISO C++11 does not allow conversion from string literal to 'wchar_t *' [-Wwritable-strings] > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(568,9): warning: jump from this goto statement to its label is a Microsoft extension [-Wmicrosoft-goto] > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(572,9): warning: jump from this goto statement to its label is a Microsoft extension [-Wmicrosoft-goto] > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(835,45): warning: ISO C++11 does not allow conversion from string literal to 'BSTR' (aka 'wchar_t *') [-Wwritable-strings] > ..\..\Tools\DumpRenderTree\win\DumpRenderTree.cpp(922,13): warning: unused function 'setCacheFolder' [-Wunused-function] > ..\..\Tools\DumpRenderTree\win\DumpRenderTreeWin.h(35,1): warning: struct 'FrameLoadDelegate' was previously declared as a class [-Wmismatched-tags] > ..\..\Tools\DumpRenderTree\win\DumpRenderTreeWin.h(36,1): warning: struct 'PolicyDelegate' was previously declared as a class [-Wmismatched-tags] > ..\..\Tools\DumpRenderTree\win\EditingDelegate.cpp(123,131): warning: format specifies type 'long' but the argument has type 'int' [-Wformat] > ..\..\Tools\DumpRenderTree\win\EditingDelegate.cpp(123,78): warning: format specifies type 'long' but the argument has type 'int' [-Wformat] > ..\..\Tools\DumpRenderTree\win\FrameLoadDelegate.cpp(54,27): warning: unused variable 'g_delegateWaitingOnTimer' [-Wunused-variable] > ..\..\Tools\DumpRenderTree\win\ResourceLoadDelegate.cpp(55,20): warning: unused function 'BSTRFromString' [-Wunused-function] > ..\..\Tools\DumpRenderTree\win\TestRunnerWin.cpp(451,31): warning: ISO C++11 does not allow conversion from string literal to 'BSTR' (aka 'wchar_t *') [-Wwritable-strings] > ..\..\Tools\DumpRenderTree\win\WorkQueueItemWin.cpp(46,16): warning: unused function 'jsStringRefToWString' [-Wunused-function]
Attachments
Patch (11.75 KB, patch)
2018-12-20 02:19 PST, Fujii Hironori
achristensen: review+
Fujii Hironori
Comment 1 2018-12-20 02:19:53 PST
Alex Christensen
Comment 2 2018-12-20 18:09:23 PST
Comment on attachment 357804 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=357804&action=review > Tools/ChangeLog:27 > + the arguemnt of setQuota instead of const string lateral. literal
Fujii Hironori
Comment 3 2018-12-20 18:23:41 PST
Radar WebKit Bug Importer
Comment 4 2018-12-20 18:24:24 PST
Note You need to log in before you can comment on or make changes to this bug.