[Win][Clang] Fix compilation warnings of DumpRenderTree https://bugs.webkit.org/show_bug.cgi?id=192924

Reviewed by Alex Christensen.

* DumpRenderTree/AccessibilityController.h: Added member variable initializations in the class definition.
* DumpRenderTree/win/AccessibilityControllerWin.cpp:
(AccessibilityController::AccessibilityController): Moved member variable initializations to the class definition.
* DumpRenderTree/win/DumpRenderTree.cpp:
(dumpHistoryItem): String literals can't be converted non-const type. Use auto for them.
(resetWebPreferencesToConsistentValues): Pass a temporal _bstr_t
object to the argument of setDefaultTextEncodingName instead of a
const string literal.
(createWebViewAndOffscreenWindow): Use %lx for HRESULT (aka 'long').
(main): Exit if _dup2 fails. Use %lu for'DWORD'(aka 'unsigned long').
(setCacheFolder): Deleted.
* DumpRenderTree/win/DumpRenderTreeWin.h: Fix class/struct mismatch of FrameLoadDelegate and PolicyDelegate declarations.
* DumpRenderTree/win/EditingDelegate.cpp:
(dump): Use %d for int.
* DumpRenderTree/win/FrameLoadDelegate.cpp: Removed unused variable g_delegateWaitingOnTimer.
* DumpRenderTree/win/ResourceLoadDelegate.cpp:
(BSTRFromString): Deleted unused function.
* DumpRenderTree/win/TestRunnerWin.cpp:
(TestRunner::setDatabaseQuota): Pass a temporal _bstr_t object to
the arguemnt of setQuota instead of const string literal.
* DumpRenderTree/win/WorkQueueItemWin.cpp:
(jsStringRefToWString): Deleted unused function.

Canonical link: https://commits.webkit.org/207525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239487 268f45cc-cd09-0410-ab3c-d52691b4dbfc